[package]
name = "rust-docs-experiment"
version = "0.1.0"
authors = ["tl-marco-ieni <marco.ieni@truelayer.com>"]
edition = "2018"
description = "rust-docs-experiment mandatory description"
repository = "https://github.com/MarcoIeni/rust-docs-experiment"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
